Exc5/non-admin-api-allow.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
#    - Egress
---
# Разрешаем входящий трафик для подов с меткой role=back-end только от подов с меткой role=front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-end-to-back-end-api
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end

---
# Разрешаем входящий трафик для подов с меткой role=front-end только от подов с меткой role=back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-back-end-api-to-front-end
spec:
  podSelector:
    matchLabels:
      role: front-end
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: back-end-api

---
# Разрешаем входящий трафик для подов с меткой role=admin-back-end-api только от подов с меткой role=admin-front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-front-end-to-admin-back-end-api
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end

---
# Разрешаем входящий трафик для подов с меткой role=admin-front-end только от подов с меткой role=admin-back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-back-end-api-to-admin-front-end
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
